# MindMate

./: LICENSE  README.md  app.py  chat-model.h5  chat.py  intents.json  label_encoder.pickle  main.py  model.py  models.py  pyproject.toml  tokenizer.pickle
static/: scripts.js  styles.css
static/assets/datasets/: bobot.csv  datatrain.csv
static/css/: result.css  style.css
static/js/: script.js
templates/: about.html  bg.html  chatbot.html  contact.html  depression_calculator.html  index.html  indexofsucide.html  motivate.html  music.html  result.html  result_depressionCalci.html  resultofsucide.html  team.html  test.html  therapist.html
